Updated saving notes for any table in the active group.

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -12331,8 +12331,8 @@
 			
 			//Mimicking popUpSaveTreeForm() (3/27/2017) RAR
 			{
-				str += "Saving will create a new persistent version for this table." + 
-						"<br><br>";
+				str += "Saving will create a new persistent version for this table.<br><p style ='font-size:12px; margin-top:3px;margin-bottom:-10px;'> Note: If this table is in a Context Group, you must restart ots for the changes to take effect.</p>" +
+						"<br>";
 				
 				str += "Please enter a comment describing this new version of <b>" + 
 						_currentConfigName + "</b>:<br>";
