--- a/WebGUI/html/widgets/widget_text.html
+++ b/WebGUI/html/widgets/widget_text.html
@@ -93,6 +93,7 @@
 					
 					var a = document.createElement('a');
 					a.id = pv;
+					a.title = pv;
 					a.innerHTML = "N/A";
 					a.style.width = "100%";
 					a.style.height = "100%";
