Improved non number string handling in FE Macro Test, and improved .icc handling in CodeEditor.

--- a/WebGUI/html/FEMacroTest.html
+++ b/WebGUI/html/FEMacroTest.html
@@ -473,7 +473,7 @@
 				for(var i=0;i<outputArgNames.length;++i)
 				{
 					var name = outputArgNames[i].getAttribute("value");
-					var value = outputArgValues[i].getAttribute("value");
+					var value = decodeURIComponent(outputArgValues[i].getAttribute("value"));
 					if(name == "Filename" || name == "filename")
 						str += name + " = " +
 							//if filename, add link to CodeEditor
