Fixed finding ? window tooltip

--- a/WebGUI/html/StateMachine.html
+++ b/WebGUI/html/StateMachine.html
@@ -434,7 +434,7 @@
                 _selectedTransition = -1;
 
                 window.addEventListener("resize",redrawPhysics);
-                //DesktopContent.mouseMoveSubscriber(handleMouseMove); //causes problems because of this.cursor handling 
+                //DesktopContent.mouseMoveSubscriber(handleMouseMove); //causes problems because of this.style.cursor handling 
                 document.body.addEventListener("mousemove",handleMouseMove);
                 document.body.addEventListener("mouseup",handleMouseUp);
 //				window.onresize = redrawPhysics;
