Fixed usage bug of MultiSelectBox (for iterator)

--- a/WebGUI/html/ConfigurationSubsetBlockDiagram.html
+++ b/WebGUI/html/ConfigurationSubsetBlockDiagram.html
@@ -123,109 +123,109 @@
 			//push name, link and rectangles: left, top, bottom, right
 //			_linkLoc.push(["Front-ends",
 //						   "urn=" + _urn + 
-//						   "&subsetBasePath=FEInterfaceConfiguration" +
+//						   "&subsetBasePath=FEInterfaceTable" +
 //						   "&groupingFieldList=Status,FEInterfacePluginName" +
 //						   "&recordAlias=Front-ends" +
 //						   "&editableFieldList=!*CommentDescription,!SlowControls*"
-//						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceConfiguration&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
+//						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceTable&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
 //						   ,2,225,57,287]); 
 			
 			_linkLoc.push(["Front-end Plugins",
 						   "urn=" + _urn + 
-						   "&subsetBasePath=FEInterfaceConfiguration" +
+						   "&subsetBasePath=FEInterfaceTable" +
 						   "&groupingFieldList=Status,FEInterfacePluginName" +
 						   "&recordAlias=Front-ends" +
 						   "&editableFieldList=!*CommentDescription,!SlowControls*"
-						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceConfiguration&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
+						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceTable&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
 						   ,429,1,807,95]); 
 			
 			_linkLoc.push(["Front-end Supervisors",
 						   "urn=" + _urn + 
-						   "&subsetBasePath=" + 		"XDAQApplicationConfiguration" +
-						   "&groupingFieldList=" + 		"Status,LinkToSupervisorConfiguration" +
+						   "&subsetBasePath=" + 		"XDAQApplicationTable" +
+						   "&groupingFieldList=" + 		"Status,LinkToSupervisorTable" +
 						   "&recordAlias=" + 			"FE Supervisors" +
 						   "&editableFieldList=" + 		"!*CommentDescription" +
 						   "&recordPreFilterList=" + 	"Class=ots::FESupervisor"
-						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceConfiguration&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
+						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceTable&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
 						   ,852,1,1232,95]); 
 			
 			_linkLoc.push(["Producer Plugins",
 						   "urn=" + _urn + 
-						   "&subsetBasePath=DataBufferConfiguration" +
+						   "&subsetBasePath=DataBufferTable" +
 						   "&groupingFieldList=Status,ProcessorPluginName" +
 						   "&recordAlias=Producers" +
 						   "&editableFieldList=!*CommentDescription" +
 						   "&recordPreFilterList=" + "ProcessorType=Producer"
-						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceConfiguration&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
+						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceTable&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
 						   ,156,500,537,595]);
 			
 			_linkLoc.push(["Data Buffers",
 						   "urn=" + _urn + 
-						   "&subsetBasePath=DataManagerConfiguration" +
+						   "&subsetBasePath=DataManagerTable" +
 						   "&groupingFieldList=Status" +
 						   "&recordAlias=Data Buffers" +
 						   "&editableFieldList=!*CommentDescription" 						   
-						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceConfiguration&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
+						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceTable&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
 						   ,580,500,962,595]);
 			
 			_linkLoc.push(["Consumer Plugins",
 						   "urn=" + _urn + 
-						   "&subsetBasePath=" + 		"DataBufferConfiguration" +
+						   "&subsetBasePath=" + 		"DataBufferTable" +
 						   "&groupingFieldList=" + 		"Status,ProcessorPluginName" +
 						   "&recordAlias=" + 			"Consumers" +
 						   "&editableFieldList=" + 		"!*CommentDescription" +
 						   "&recordPreFilterList=" + 	"ProcessorType=Consumer"
-						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceConfiguration&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
+						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceTable&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
 						   ,1003,500,1384,595]);
 			
 			_linkLoc.push(["Visualizer Supervisors",
 						   "urn=" + _urn + 
-						   "&subsetBasePath=" + 		"XDAQApplicationConfiguration" +
-						   "&groupingFieldList=" + 		"Status,LinkToSupervisorConfiguration" +
+						   "&subsetBasePath=" + 		"XDAQApplicationTable" +
+						   "&groupingFieldList=" + 		"Status,LinkToSupervisorTable" +
 						   "&recordAlias=" + 			"Visualizer Supervisors" +
 						   "&editableFieldList=" + 		"!*CommentDescription" +
 						   "&recordPreFilterList=" + 	"Class=ots::VisualSupervisor"
-						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceConfiguration&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
+						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceTable&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
 						   ,976,363,1358,460]); 
 			
 			_linkLoc.push(["Controls Plugins",
 						   "urn=" + _urn + 
-						   "&subsetBasePath=" + 		"XDAQApplicationConfiguration" +
-						   "&groupingFieldList=" + 		"Status,LinkToSupervisorConfiguration" +
+						   "&subsetBasePath=" + 		"XDAQApplicationTable" +
+						   "&groupingFieldList=" + 		"Status,LinkToSupervisorTable" +
 						   "&recordAlias=" + 			"Controls Supervisors" +
 						   "&editableFieldList=" + 		"!*CommentDescription" +
 						   "&recordPreFilterList=" + 	"Class=ots::ControlsDashboardSupervisor"
-						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceConfiguration&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
+						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceTable&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
 						   ,553,205,936,302]); 
 
 			_linkLoc.push(["Controls Supervisors",
 						   "urn=" + _urn + 
-						   "&subsetBasePath=" + 		"XDAQApplicationConfiguration" +
-						   "&groupingFieldList=" + 		"Status,LinkToSupervisorConfiguration" +
+						   "&subsetBasePath=" + 		"XDAQApplicationTable" +
+						   "&groupingFieldList=" + 		"Status,LinkToSupervisorTable" +
 						   "&recordAlias=" + 			"Controls Supervisors" +
 						   "&editableFieldList=" + 		"!*CommentDescription" +
 						   "&recordPreFilterList=" + 	"Class=ots::ControlsDashboardSupervisor"
-						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceConfiguration&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
+						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceTable&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
 						   ,976,205,1358,302]); 
 			
 			_linkLoc.push(["Desktop Icons",
 						   "urn=" + _urn + 
-						   "&subsetBasePath=" + 		"DesktopIconConfiguration" +
+						   "&subsetBasePath=" + 		"DesktopIconTable" +
 						   "&groupingFieldList=" + 		"Status,FolderPath" +
 						   "&recordAlias=" + 			"Desktop Icons" +
 						   "&editableFieldList=" + 		"!*CommentDescription" +
 						   "&recordPreFilterList=" + 	""
-						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceConfiguration&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
+						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceTable&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
 						   ,1462,18,1885,215]); 
 			
 			_linkLoc.push(["Visualizer Web-apps",
 						   "urn=" + _urn + 
-						   "&subsetBasePath=" + 		"DesktopIconConfiguration" +
+						   "&subsetBasePath=" + 		"DesktopIconTable" +
 						   "&groupingFieldList=" + 		"Status,FolderPath" +
 						   "&recordAlias=" + 			"Visualizer Web-apps" +
 						   "&editableFieldList=" + 		"!*CommentDescription" +
 						   "&recordPreFilterList=" + 	"WindowContentURL=*Visualization*"
-						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceConfiguration&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
+						   //"/WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceTable&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A"
 						   ,1462,254,1885,450]); 
 			
 			
@@ -423,7 +423,7 @@
 			
 			Debug.log("handleClick name: " + _linkLoc[i][0]);
 			
-			//WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceConfiguration&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A
+			//WebPath/html/ConfigurationGUI_subset.html?urn=281&subsetBasePath=FEInterfaceTable&groupingFieldList=Status%2CFEInterfacePluginName&recordAlias=Front%2Dends&editableFieldList=%21%2ACommentDescription%2C%21SlowControls%2A
 			if(menuIndex == 0) //open new window
 			{
 				DesktopContent.openNewWindow(_linkLoc[i][0],"Subset",
