Fixed bouncing ball iterator bug

--- a/WebGUI/html/Iterate.html
+++ b/WebGUI/html/Iterate.html
@@ -4374,7 +4374,7 @@
 								val = "...";
 							document.getElementById("plan-command-bounceBall-text-" + 
 									command_index + "-depth-" + 
-									(i+1)).innerHTML = val;
+									(i)).innerHTML = val;//(i+1)).innerHTML = val;
 						}
 						val = command_iteration | 0;
 						if(val > 99) //truncate text length
