Removed ? - instead rely on window tooltip

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -15782,10 +15782,10 @@
 	<a href='#' onclick='setupGroupViewMode(); return false;'>Group View</a>	&nbsp;&nbsp;
 	<a href='#' onclick='setupTableViewMode(); return false;'>Table View</a>	&nbsp;&nbsp;
 
-	<a style='margin-left:50px;' target="_blank" 
+	<!-- <a style='margin-left:50px;' target="_blank" 
 			href="https://cdcvs.fnal.gov/redmine/projects/otsdaq/search?utf8=%E2%9C%93&wiki_pages=1&q=configuration+gui&all_words=1&issues=1&documents=1" 
 					title="Click to open ots documentation">
-	<img src="/WebPath/images/dashboardImages/icon-Help.png"></a>
+	<img src="/WebPath/images/dashboardImages/icon-Help.png"></a> -->
 	
 		</div>
 	
