--- a/WebGUI/html/ConfigurationGUI_subset.html
+++ b/WebGUI/html/ConfigurationGUI_subset.html
@@ -247,17 +247,17 @@
 						Debug.HIGH_PRIORITY);
 				return;
 			}
+			var windowTooltip = "Welcome to the Configuration-Subset GUI targeting " + _recordsAlias +
+				". Here you can manipulate the fields " +
+				"of a subset of your <i>otsdaq</i> system. \n\n" +
+				"The organization of the Configuration-Subset GUI is in the form of two panes, a left and right.\n\n" +
 
+				"Briefly, here is a description of the two panes: " +
+				"\n\t- 'Left Pane' is for selecting one or many records to target." +
+				"\n\t- 'Right Pane' is for modifying the common fields associated with the selected records.";
 			DesktopContent.tooltip("Configuration-Subset GUI Introduction",
-					"Welcome to the Configuration-Subset GUI targeting " + _recordsAlias + 
-					". Here you can manipulate the fields "+
-					"of a subset of your <i>otsdaq</i> system. \n\n" +
-					"The organization of the Configuration-Subset GUI is in the form of two panes, a left and right.\n\n" +
-
-					"Briefly, here is a description of the two panes: " +
-					"\n\t- 'Left Pane' is for selecting one or many records to target." +
-					"\n\t- 'Right Pane' is for modifying the common fields associated with the selected records."
-			);
+			windowTooltip);
+			DesktopContent.setWindowTooltip(windowTooltip);
 
 			//get subset record uids and 
 			//	filter values for all possible grouping fields
