--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -13556,8 +13556,8 @@
 				
 				str += "<option value= ',' selected>Comma ' , '</option>";
 				str += "<option value= '/'>Backslach ' / '</option>";
-				str += "<option value= '|'>pipe ' | '</option>";
-				str += "<option value= '.'>Dot' . '</option>";
+				str += "<option value= '|'>Pipe ' | '</option>";
+				str += "<option value= '.'>Dot ' . '</option>";
 
 			str += "</select><br><br>";
 
