Simplified upload delimiter options for config GUI

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -11372,7 +11372,7 @@
 							var fileKey = fileKeyArr.pop();
 							//this code is copied from js::ConfigurationGUI::uploadTableFromCSV()
 
-							var colDel, rowDel = '\n; //row/record and column/field delimeters (default record to \n)
+							var colDel, rowDel = '\n'; //row/record and column/field delimeters (default record to \n)
 							
 							var tmpStr = "";
 
