Simplified upload delimiter options for config GUI

--- a/WebGUI/html/ConfigurationGUI_subset.html
+++ b/WebGUI/html/ConfigurationGUI_subset.html
@@ -34,7 +34,7 @@
 		}
 		#leftPane {
 			/*background-color : rgb(241, 231, 231);*/
-			overflow-x: hidden;
+			overflow-x: scroll;
 			overflow-y: scroll;
 			
 		    border-top: 1px solid rgb(224, 196, 196);
