Checkpoint in add desktop icon

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -3949,12 +3949,12 @@
 						", \"WebPath/html/ConfigurationGUI_subset.html?urn=\" /*windowContentURL*/" +
 						", \"ots::ConfigurationGUISupervisor\" /*linkedApp*/" +
 						", /*parameters*/ \"" +
-						"&subsetBasePath=" + treeMemberNames_[j] +
+						"subsetBasePath=" + treeMemberNames_[j] +
 						"&groupingFieldList=AUTO" +
 						"&recordAlias=" + recordAlias +
 						"&editableFieldList=" + "!*CommentDescription" +
 						"\"" +
-						");"; newWindowStr
+						");"; 
 
 					treeNavContextMenuItems.push(DEFAULT_treeNavContextMenuItems[menuIndex++]);
 					treeNavContextMenuItemHandlers.push(newtabJS);
